@@ -197,6 +197,9 @@ Release 2.4.0 - UNRELEASED
     YARN-895. Changed RM state-store to not crash immediately if RM restarts while
     the state-store is down. (Jian He via vinodkv)
 
+    YARN-1454. Fixed test failure issue with TestRMRestart. (Karthik Kambatla
+    via vinodkv)
+
 Release 2.3.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
